# sona

./: .gitignore  BUILDING.md  README.md  go.mod  go.sum
.github/workflows/: build-libs.yml  release-diarize.yml  release.yml  test-release.yml
cmd/sona/: commands.go  pull.go
cmd/sonara/: commands.go  main.go
diarize/: Cargo.toml
diarize/src/: main.rs
docs/: ARCHITECTURE.md
internal/audio/: audio.go
internal/diarize/: diarize.go
internal/server/: api_handlers.go  format.go  server.go
internal/whisper/: vulkan_other.go  vulkan_windows.go  whisper.go  whisper_cgo.c  whisper_cgo.go  whisper_cgo.h  whisper_darwin.go  whisper_linux.go  whisper_windows.go
parent/: parent.go  parent_unix.go  parent_windows.go
plans/sona/: sonara_001.md
plans/static-linking/: static-linking_001.md
plans/vulkan-debug/: vulkan-debug_001.md  vulkan-debug_003.md
plans/whisper-linux/: whisper-linux_001.md
scripts/: build-ipa-whisper-medium.sh  build-libs.py  download-libs.py  fetch-headers.py  package-release.py
sonapy/examples/: diarize.py
sonapy/src/sonapy/: client.py  sona.py
tests/manual/: test_openai_transcription.py
