[package]
name = "sona-diarize"
version = "0.1.0"
edition = "2021"
description = "Speaker diarization runner for Sona using NVIDIA Sortformer"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sona-diarize"
path = "src/main.rs"

[dependencies]
parakeet-rs = { version = "0.3.2", features = ["sortformer"] }
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
